# task-manager-api

./: .env.example  README.md  alembic.ini  db_down.sql  db_setup.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 5d5d23171c62_updated_email_check.py  ace4f183072f_add_user_and_task_tables.py  b4d400a81cca_add_user_table.py  c5615778a7a3_removed_regex_checks.py  e69b946e9eec_add_users_table.py
src/task_manager_api/: config.py  database.py  main.py  utils.py
src/task_manager_api/tasks/: \  models.py  routes.py  schemas.py  services.py
src/task_manager_api/users/: crud.py  models.py  routes.py  schemas.py  utils.py
