[build-system]
requires = ["uv_build>=0.11.31,<0.12"]
build-backend = "uv_build"

[project]
name = "task-manager-api"
version = "0.1.0"
description = "A task-manager CLI tool for practicing backend fundamentals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]
